update parse_vb due to another pattern

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-07-06T19:44:54.720164Z",
-     "start_time": "2025-07-06T19:44:54.718720Z"
+     "end_time": "2025-07-08T19:15:55.341602Z",
+     "start_time": "2025-07-08T19:15:55.340046Z"
     }
    },
    "source": [
@@ -26,8 +26,8 @@
    "id": "72b06ccb21a1cb99",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-06T19:45:25.012049Z",
-     "start_time": "2025-07-06T19:44:54.728337Z"
+     "end_time": "2025-07-08T19:59:51.280492Z",
+     "start_time": "2025-07-08T19:58:56.271165Z"
     }
    },
    "source": [
@@ -46,13 +46,12 @@
     "dt_is_position_ok = pd.read_pickle(\"result/Check Position.pkl.gz\")\n",
     "dt_check_sequence = pd.read_pickle(\"result/Check Sequence.pkl.gz\")\n",
     "dt_is_vb_ok = pd.read_pickle(\"result/Is VB OK.pkl.gz\")\n",
-    "dt_akl_layout = pd.read_csv(\"AKL_complete.csv\")\n",
     "dt_get_set_nio = pd.read_pickle(\"result/Get Set NIO.pkl.gz\")\n",
     "dt_log_output = pd.read_pickle(\"result/parsed_log_output.pkl.gz\")\n",
     "dt_log_output = pd.DataFrame(dt_log_output)"
    ],
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 21
   },
   {
    "metadata": {
@@ -140,6 +139,8 @@
     }
    },
    "cell_type": "code",
+   "outputs": [],
+   "execution_count": 4,
    "source": [
     "# Regarding INFO CODE\n",
     "# dt_path_movement_failed['info_code'] -> only W\n",
@@ -148,9 +149,7 @@
     "# dt_unknown -> I, W, E\n",
     "# the rest only I"
    ],
-   "id": "448e760a4a2a2252",
-   "outputs": [],
-   "execution_count": 4
+   "id": "448e760a4a2a2252"
   },
   {
    "metadata": {
@@ -366,20 +365,6 @@
     "combined_le_df = pd.concat([start_df, end_df, execute_rbg_df, path_movement_df, position_df, check_sequence_df, is_vb_ok_df, get_set_nio_df], ignore_index=True)\n",
     "# combined_le_df = pd.concat([start_df, end_df, path_movement_df, position_df, check_sequence_df, is_vb_ok_df, get_set_nio_df], ignore_index=True)\n",
     "combined_le_df = combined_le_df.sort_values(by=['le', 'timestamp'])\n",
-    "\n",
-    "# Helper to remove consecutive duplicates\n",
-    "def remove_consecutive_duplicates(event_list):\n",
-    "    return [key for key, _ in groupby(event_list)]\n",
-    "\n",
-    "# Apply it after sorting and grouping\n",
-    "event_sequence = (\n",
-    "    combined_le_df\n",
-    "    .sort_values(['le', 'timestamp'])\n",
-    "    .groupby('le')['event']\n",
-    "    .apply(lambda x: remove_consecutive_duplicates(list(x)))\n",
-    "    .reset_index(name='event_sequence')\n",
-    ")\n",
-    "# 3387 unique event_sequence\n",
     "\n",
     "event_counts = (\n",
     "    combined_le_df\n",
@@ -796,41 +781,6 @@
     }
    ],
    "execution_count": 11
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-07-06T19:45:49.394638Z",
-     "start_time": "2025-07-06T19:45:48.819905Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "# combine all alert and telegram\n",
-    "\n",
-    "alerts_received_df = dt_alerts_received[['timestamp', 'alert_name', 'lfdnr', 'text']].copy()\n",
-    "alerts_received_df['event'] = 'alerts_received'\n",
-    "\n",
-    "alerts_handled_df = dt_alerts_handled[['timestamp', 'alert_name', 'lfdnr', 'text']].copy()\n",
-    "alerts_handled_df['event'] = 'alerts_handled'\n",
-    "\n",
-    "alerts_processing_df = dt_alerts_processing[['timestamp', 'alert_name', 'lfdnr', 'text']].copy()\n",
-    "alerts_processing_df['event'] = 'alerts_processing'\n",
-    "\n",
-    "telegrams_processed_df = dt_telegrams_processed[['timestamp', 'alert_name', 'text']].copy()\n",
-    "telegrams_processed_df['lfdnr'] = None\n",
-    "telegrams_processed_df['event'] = 'telegrams_processed'\n",
-    "\n",
-    "telegrams_sent_df = dt_telegrams_sent[['timestamp', 'alert_name', 'text']].copy()\n",
-    "telegrams_sent_df['lfdnr'] = None\n",
-    "telegrams_sent_df['event'] = 'telegrams_processed'\n",
-    "\n",
-    "combined_alert_df = pd.concat([alerts_received_df, alerts_handled_df, alerts_processing_df, telegrams_processed_df, telegrams_sent_df], ignore_index=True)\n",
-    "combined_alert_df = combined_alert_df.sort_values(by=['timestamp'])\n"
-   ],
-   "id": "7e97e096b0abf55f",
-   "outputs": [],
-   "execution_count": 12
   },
   {
    "metadata": {
@@ -1348,8 +1298,7 @@
     "combined_single_event_le_df\n",
     "# distinct_paths\n",
     "# distinct_path_le_counts\n",
-    "# combined_le_df[combined_le_df['le'] == '1847230']\n",
-    "# combined_alert_df[combined_alert_df['text'].astype(str).str.contains('1847230')]"
+    "# combined_le_df[combined_le_df['le'] == '1847230']"
    ],
    "id": "2c8dfa6ecb74cef0",
    "outputs": [
@@ -2677,8 +2626,7 @@
    "cell_type": "code",
    "source": [
     "# dt_log_output[(dt_log_output[5].astype(str).str.contains('1847007'))]\n",
-    "# combined_le_df[combined_le_df['le'] == '1847007'] # 2025-02-06 06:09:42.498\n",
-    "combined_alert_df[combined_alert_df['text'].astype(str).str.contains('1847007')]"
+    "# combined_le_df[combined_le_df['le'] == '1847007'] # 2025-02-06 06:09:42.498"
    ],
    "id": "a01a0d3680888d2e",
    "outputs": [
